# facedet

./: .gitattributes  .gitmodules  README.md  download_vendor.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/me/gordinmitya/ds/facedet/: MainActivity.kt  Visualise.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
facelib/: .gitignore  build.gradle.kts
facelib/src/main/assets/models/: README.md  faceDetector.ncnn.param
facelib/src/main/cpp/: CMakeLists.txt
facelib/src/main/cpp/src/: FaceDetector.cpp  FaceDetector.h  convert2floats.h  convert2java.h  facelib.cpp  types.h
facelib/src/main/java/me/gordinmitya/ds/facelib/: Detector.kt  Models.kt  NativeLib.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
